Add markdown support for Doxygen.
Now doxygen generates XML files to `doc/xml` folder. This XML file using by moxygen software and moxygen generates markdown files of project.

`script/generate_doxygen.sh` has been modificated and now generates markdown after html/latex

--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -207,6 +207,7 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\input{md_mental-doc-_06s}
 \input{md_README}
 \chapter{Data Structure Index}
 \input{annotated}
@@ -220,6 +221,7 @@
 \input{mental__xv__core_8h_source}
 \input{mental__xv__math_8h}
 \input{mental__xv__math_8h_source}
+\input{mental-doc-_06s_8md}
 \input{README_8md}
 %--- End generated contents ---
 % Index
