Maybe, i want also creating window?

--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -1,5 +1,6 @@
 \doxysection{Data Structures}
 Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{structMentalApplicationInfo}{Mental\+Application\+Info}} \\*Structure containing application information }{\pageref{structMentalApplicationInfo}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structMentalInstance}{Mental\+Instance}} }{\pageref{structMentalInstance}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structMentalInstanceCreateInfo}{Mental\+Instance\+Create\+Info}} \\*Structure containing information for creating an instance }{\pageref{structMentalInstanceCreateInfo}}{}
 \end{DoxyCompactList}
