--- a/doc/latex/files.tex
+++ b/doc/latex/files.tex
@@ -1,5 +1,7 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{include/\mbox{\hyperlink{mental__xv__controls_8h}{mental\+\_\+xv\+\_\+controls.\+h}} }{\pageref{mental__xv__controls_8h}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{mental__xv__core_8h}{mental\+\_\+xv\+\_\+core.\+h}} }{\pageref{mental__xv__core_8h}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{mental__xv__math_8h}{mental\+\_\+xv\+\_\+math.\+h}} }{\pageref{mental__xv__math_8h}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{mental__xv__windows_8h}{mental\+\_\+xv\+\_\+windows.\+h}} }{\pageref{mental__xv__windows_8h}}{}
 \end{DoxyCompactList}
