--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -207,19 +207,31 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\input{md_doc_2mental-doc}
 \input{md_README}
+\chapter{Topic Index}
+\input{topics}
 \chapter{Data Structure Index}
 \input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Topic Documentation}
+\input{group__keys}
+\input{group__buttons}
 \chapter{Data Structure Documentation}
 \input{structMentalApplicationInfo}
+\input{structMentalInstance}
 \input{structMentalInstanceCreateInfo}
 \chapter{File Documentation}
+\input{mental-doc_8md}
+\input{mental__xv__controls_8h}
+\input{mental__xv__controls_8h_source}
 \input{mental__xv__core_8h}
 \input{mental__xv__core_8h_source}
 \input{mental__xv__math_8h}
 \input{mental__xv__math_8h_source}
+\input{mental__xv__windows_8h}
+\input{mental__xv__windows_8h_source}
 \input{README_8md}
 %--- End generated contents ---
 % Index
