--- a/doc/latex/dir_d44c64559bbebec7f509842c48db8b23.tex
+++ b/doc/latex/dir_d44c64559bbebec7f509842c48db8b23.tex
@@ -3,7 +3,11 @@
 \doxysubsubsection*{Files}
 \begin{DoxyCompactItemize}
 \item 
+file \mbox{\hyperlink{mental__xv__controls_8h}{mental\+\_\+xv\+\_\+controls.\+h}}
+\item 
 file \mbox{\hyperlink{mental__xv__core_8h}{mental\+\_\+xv\+\_\+core.\+h}}
 \item 
 file \mbox{\hyperlink{mental__xv__math_8h}{mental\+\_\+xv\+\_\+math.\+h}}
+\item 
+file \mbox{\hyperlink{mental__xv__windows_8h}{mental\+\_\+xv\+\_\+windows.\+h}}
 \end{DoxyCompactItemize}
